Se cambia la lógica que verifica que el usuario está loggeado y la info que se le muestra en un View según el rol.

--- a/webMetics/Views/Asesor/EditarAsesor.cshtml
+++ b/webMetics/Views/Asesor/EditarAsesor.cshtml
@@ -6,15 +6,13 @@
 
 @{
     ViewBag.Title = "Editar asesor";
-
-    int rolCookie = 1;
 }
 <!DOCTYPE html>
 <html>
 <head>
 </head>
 <body>
-    @if (rolCookie == 1) // ToDo
+    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
     {
         using (Html.BeginForm("ActualizarAsesor", "Asesor", FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
