--- a/webMetics/Views/Asesor/AgregarAsesor.cshtml
+++ b/webMetics/Views/Asesor/AgregarAsesor.cshtml
@@ -7,7 +7,6 @@
 
 @{
     ViewBag.Title = "Crear asesor";
-    int rolCookie = 1;
 }
 <!DOCTYPE html>
 
@@ -15,7 +14,7 @@
 <head>
 </head>
 <body>
-    @if (true) // ToDo
+    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
     {
         using (Html.BeginForm("CrearAsesor", "Asesor", FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
