--- a/webMetics/Views/Categoria/CrearCategoria.cshtml
+++ b/webMetics/Views/Categoria/CrearCategoria.cshtml
@@ -2,7 +2,6 @@
 @using webMetics.Controllers
 @{
     ViewBag.Title = "Crear categoría";
-    int rolCookie = 1;
 }
 <!DOCTYPE html>
 
@@ -10,7 +9,7 @@
 <head>
 </head>
 <body>
-    @if (true) // To Do
+    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
     {
         using (Html.BeginForm("CrearCategoria", "Categoria", FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
