--- a/webMetics/Views/Participante/ListaParticipantes.cshtml
+++ b/webMetics/Views/Participante/ListaParticipantes.cshtml
@@ -1,7 +1,5 @@
 ﻿@using webMetics.Controllers;
 @{
-
-    int rolCookie = 0; // To Do
 }
 
 
@@ -11,13 +9,11 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.22/pdfmake.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
 
-    @if (rolCookie == 1 || rolCookie == 2)
+    @if (User.Identity.IsAuthenticated && (User.IsInRole("Admin") || User.IsInRole("Asesor")))
     {
         <div class="contenedor-tipos-actividades container-fluid">
-            @if (true) // To Do
-            {
-                <a class="bottomNav bi bi-arrow-left" style="color: #5a5a5a; text-decoration: none; " onclick="history.go(-1); return false;" href="#"></a><br />
-            }
+            <a class="bottomNav bi bi-arrow-left" style="color: #5a5a5a; text-decoration: none; " onclick="history.go(-1); return false;" href="#"></a><br />
+            
             <h1>@ViewBag.NombreGrupo</h1>
             <h2>@ViewBag.Title</h2>
             <hr />
@@ -95,7 +91,7 @@
                                 <th scope="col">Correo institucional</th>
                                 <th scope="col">Teléfono</th>
                                 <th scope="col" style="width:5%"></th>
-                                @if (rolCookie == 1)
+                                @if (User.IsInRole("Admin"))
                                 {
                                     <th scope="col" style="width:5%"></th>
                                 }
@@ -121,7 +117,7 @@
                                     <td class="titulo-listas">
                                         @Html.ActionLink(" ", "VerDatosParticipante", "Participante", new { idParticipante = participante.idParticipante }, new { @class = "btn btn-info bi bi-search" })
                                     </td>
-                                    @if (rolCookie == 1)
+                                    @if (User.IsInRole("Admin"))
                                     {
                                         <td class="titulo-listas">
                                             <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#modalEliminar" onclick="actualizarModal('@participante.idParticipante', '@ViewBag.IdGrupo')">
