--- a/webMetics/wwwroot/css/site.css
+++ b/webMetics/wwwroot/css/site.css
@@ -1,22 +1,60 @@
-html {
-  font-size: 14px;
+﻿#body-login container {
+    height: 200px;
+    position: relative;
+    margin: 0;
 }
 
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+#body-login {
+    margin: 0;
 }
 
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+.container-cards {
+    margin: 15vh auto;
+    border-radius: 15px;
 }
 
-html {
-  position: relative;
-  min-height: 100%;
+.formulario-login {
+    width: 75%;
+    padding: 90px 30px 50px 30px;
 }
 
-body {
-  margin-bottom: 60px;
+.datos-login {
+    margin-top:20px;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+}
+
+.contenedor-tipos-actividades {
+    margin-top: 60px;
+    margin-bottom: 150px;
+    align-content: center;
+    text-align: justify;
+}
+
+.titulo-listas {
+    font-size: 1.2rem;
+    font-weight: 900;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-align: left;
+}
+@media only screen and (max-width: 580px) {
+    .titulo-listas {
+        font-size: 1rem;
+    }
+}
+
+.boton-formularios {
+    float: right;
+    margin-right: 20px;
+    width:20%;
+    height:105%
+}
+
+.hiddenRow {
+    padding: 0 !important;
 }
