--- a/webMetics/Views/Grupo/AgregarGrupo.cshtml
+++ b/webMetics/Views/Grupo/AgregarGrupo.cshtml
@@ -3,13 +3,12 @@
 @{
     ViewBag.Title = "Crear módulo";
 }
-
 <!DOCTYPE html>
 <html>
 <head>
 </head>
 <body>
-    @if (User.Identity.IsAuthenticated && (User.IsInRole("Admin") || User.IsInRole("Asesor")))
+    @if (ViewBag.Id != "" && (ViewBag.Role == 1 || ViewBag.Role == 2))
     {
         <!-- ** BEGIN POP-UP LOADING AREA ** -->
         <div id="loading" style="display:none;">
@@ -180,3 +179,17 @@
         margin-top: 20px;
     }
 </style>
+
+@section Scripts{
+    <script src="https://code.jquery.com/jquery-migrate-3.0.1.js"></script>
+
+    <script type="text/javascript">
+        $(function () {
+            $("form").submit(function () {
+                if ($(this).valid()) {
+                    $("#loading").show();
+                }
+            });
+        });
+    </script>
+}
