--- a/webMetics/Areas/Identity/Pages/Account/Register.cshtml
+++ b/webMetics/Areas/Identity/Pages/Account/Register.cshtml
@@ -12,17 +12,17 @@
             <h2>Create a new account.</h2>
             <hr />
 
-            <div class="form-floating">
+            <div class="form-floating mb-3">
                 <label asp-for="Input.nombre"></label>
-                <input asp-for="Input.nombre" class="form-control" />
-                <span asp-validation-for="Input.nombre" class="text-danger"></span>
+                <input asp-for="Input.nombre" class="form-control text-muted" />
+                <span asp-validation-for="Input.nombre" class="text-muted"></span>
             </div>
-            <div class="form-floating">
+            <div class="form-floating mb-3 ">
                 <label asp-for="Input.apellido_1"></label>
                 <input asp-for="Input.apellido_1" class="form-control" />
                 <span asp-validation-for="Input.apellido_1" class="text-danger"></span>
             </div>
-            <div class="form-floating">
+            <div class="form-floating  mb-3">
                 <label asp-for="Input.apellido_2"></label>
                 <input asp-for="Input.apellido_2" class="form-control" />
                 <span asp-validation-for="Input.apellido_2" class="text-danger"></span>
@@ -43,42 +43,42 @@
                 <label asp-for="Input.ConfirmPassword">Confirm Password</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <div class="form-floating">
+            <div class="form-floating mb-3">
                 <label asp-for="Input.tipoIdentificacion"></label>
                 <input asp-for="Input.tipoIdentificacion" class="form-control" />
                 <span asp-validation-for="Input.tipoIdentificacion" class="text-danger"></span>
             </div>
-            <div class="form-floating">
+            <div class="form-floating mb-3">
                 <label asp-for="Input.idParticipante"></label>
                 <input asp-for="Input.idParticipante" class="form-control" />
                 <span asp-validation-for="Input.idParticipante" class="text-danger"></span>
             </div>
-            <div class="form-floating">
+            <div class="form-floating mb-3">
                 <label asp-for="Input.unidadAcademica"></label>
                 <input asp-for="Input.unidadAcademica" class="form-control" />
                 <span asp-validation-for="Input.unidadAcademica" class="text-danger"></span>
             </div>
-            <div class="form-floating">
+            <div class="form-floating mb-3">
                 <label asp-for="Input.area"></label>
                 <input asp-for="Input.area" class="form-control" />
                 <span asp-validation-for="Input.area" class="text-danger"></span>
             </div>
-            <div class="form-floating">
+            <div class="form-floating mb-3">
                 <label asp-for="Input.departamento"></label>
                 <input asp-for="Input.departamento" class="form-control" />
                 <span asp-validation-for="Input.departamento" class="text-danger"></span>
             </div>
-            <div class="form-floating">
+            <div class="form-floating mb-3">
                 <label asp-for="Input.seccion"></label>
                 <input asp-for="Input.seccion" class="form-control" />
                 <span asp-validation-for="Input.seccion" class="text-danger"></span>
             </div>
-            <div class="form-floating">
+            <div class="form-floating mb-3">
                 <label asp-for="Input.condicion"></label>
                 <input asp-for="Input.condicion" class="form-control" />
                 <span asp-validation-for="Input.condicion" class="text-danger"></span>
             </div>
-            <div class="form-floating">
+            <div class="form-floating mb-3">
                 <label asp-for="Input.telefonos"></label>
                 <input asp-for="Input.telefonos" class="form-control" />
                 <span asp-validation-for="Input.telefonos" class="text-danger"></span>
@@ -86,36 +86,6 @@
 
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to register.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins!)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
     </div>
 </div>
 
