--- a/webMetics/Views/Calificaciones/EditarCalificacion.cshtml
+++ b/webMetics/Views/Calificaciones/EditarCalificacion.cshtml
@@ -9,12 +9,13 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.22/pdfmake.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
 
-    @if (User.Identity.IsAuthenticated && (User.IsInRole("Admin") || User.IsInRole("Asesor")))
+    @if (ViewBag.Id != "" && (ViewBag.Role == 1 || ViewBag.Role == 2))
     {
         <div class="contenedor-tipos-actividades container-fluid">
-            
-            <a class="bottomNav bi bi-arrow-left" style="color: #5a5a5a; text-decoration: none; " onclick="history.go(-1); return false;" href="#"></a><br />
-
+            @if (/*Request.UrlReferrer != null*/true)
+            {
+                <a class="bottomNav bi bi-arrow-left" style="color: #5a5a5a; text-decoration: none; " onclick="history.go(-1); return false;" href="#"></a><br />
+            }
             <h1>@ViewBag.NombreGrupo</h1>
             <h2>@ViewBag.Title</h2>
             @if (TempData["Message"] != null)
