--- a/webMetics/Views/Participante/ObtenerParticipante.cshtml
+++ b/webMetics/Views/Participante/ObtenerParticipante.cshtml
@@ -7,7 +7,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+    @if (ViewBag.Id != "" && ViewBag.Role == 1)
     {
         using (Html.BeginForm("ObtenerParticipante", "Participante", FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
