--- a/webMetics/Views/Asesor/ListaAsesores.cshtml
+++ b/webMetics/Views/Asesor/ListaAsesores.cshtml
@@ -12,10 +12,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+    @if (ViewBag.Id != "" && ViewBag.Role == 1)
     {
         <div class="contenedor-tipos-actividades container-fluid">
-            @if (true /*request.Headers["Referer"] != null*/) //ToDo
+            @if (true/*Request.UrlReferrer != null*/)
             {
                 <a class="bottomNav bi bi-arrow-left" style="color: #5a5a5a; text-decoration: none; " onclick="history.go(-1); return false;" href="#"></a><br />
             }
