--- a/webMetics/Views/Categoria/CrearCategoria.cshtml
+++ b/webMetics/Views/Categoria/CrearCategoria.cshtml
@@ -9,7 +9,7 @@
 <head>
 </head>
 <body>
-    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+    @if (ViewBag.Id != "" && ViewBag.Role == 1)
     {
         using (Html.BeginForm("CrearCategoria", "Categoria", FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
