--- a/webMetics/Views/Categoria/ListaCategorias.cshtml
+++ b/webMetics/Views/Categoria/ListaCategorias.cshtml
@@ -2,14 +2,18 @@
 @{
     ViewBag.Title = "Categorías";
 }
-
 <!DOCTYPE html>
 <html>
 <body>
-    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+    @if (ViewBag.Id != "" && ViewBag.Role == 1)
     {
+
+
         <div class="contenedor-tipos-actividades container-fluid">
-            <a class="bottomNav bi bi-arrow-left" style="color: #5a5a5a; text-decoration: none; " onclick="history.go(-1); return false;" href="#"></a><br />
+            @if (/*Request.UrlReferrer != null*/true)
+            {
+                <a class="bottomNav bi bi-arrow-left" style="color: #5a5a5a; text-decoration: none; " onclick="history.go(-1); return false;" href="#"></a><br />
+            }
 
             <h1>Categorías</h1>
             <hr />
