--- a/webMetics/Views/Login/GestionarContrasena.cshtml
+++ b/webMetics/Views/Login/GestionarContrasena.cshtml
@@ -6,10 +6,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-    @if (User.Identity.IsAuthenticated)
+    @if (ViewBag.Id != "")
     {
         <div class="contenedor-tipos-actividades container-fluid">
-            @if (true) // ToDO
+            @if (/*Request.UrlReferrer != null*/true)
             {
                 <a class="bottomNav bi bi-arrow-left" style="color: #5a5a5a; text-decoration: none; " onclick="history.go(-1); return false;" href="#"></a><br />
             }
