--- a/webMetics/Views/Participante/ListaParticipantes.cshtml
+++ b/webMetics/Views/Participante/ListaParticipantes.cshtml
@@ -1,5 +1,6 @@
 ﻿@using webMetics.Controllers;
 @{
+
 }
 
 
@@ -9,11 +10,13 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.22/pdfmake.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
 
-    @if (User.Identity.IsAuthenticated && (User.IsInRole("Admin") || User.IsInRole("Asesor")))
+    @if (ViewBag.Role == 1 || ViewBag.Role == 2)
     {
         <div class="contenedor-tipos-actividades container-fluid">
-            <a class="bottomNav bi bi-arrow-left" style="color: #5a5a5a; text-decoration: none; " onclick="history.go(-1); return false;" href="#"></a><br />
-            
+            @if (/*Request.UrlReferrer != null*/true)
+            {
+                <a class="bottomNav bi bi-arrow-left" style="color: #5a5a5a; text-decoration: none; " onclick="history.go(-1); return false;" href="#"></a><br />
+            }
             <h1>@ViewBag.NombreGrupo</h1>
             <h2>@ViewBag.Title</h2>
             <hr />
@@ -91,7 +94,7 @@
                                 <th scope="col">Correo institucional</th>
                                 <th scope="col">Teléfono</th>
                                 <th scope="col" style="width:5%"></th>
-                                @if (User.IsInRole("Admin"))
+                                @if (rolCookie == 1)
                                 {
                                     <th scope="col" style="width:5%"></th>
                                 }
@@ -117,7 +120,7 @@
                                     <td class="titulo-listas">
                                         @Html.ActionLink(" ", "VerDatosParticipante", "Participante", new { idParticipante = participante.idParticipante }, new { @class = "btn btn-info bi bi-search" })
                                     </td>
-                                    @if (User.IsInRole("Admin"))
+                                    @if (rolCookie == 1)
                                     {
                                         <td class="titulo-listas">
                                             <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#modalEliminar" onclick="actualizarModal('@participante.idParticipante', '@ViewBag.IdGrupo')">
