--- a/webMetics/Views/TipoActividad/CrearTipoActividad.cshtml
+++ b/webMetics/Views/TipoActividad/CrearTipoActividad.cshtml
@@ -9,7 +9,7 @@
 <head>
 </head>
 <body>
-    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+    @if (ViewBag.Id != "" && ViewBag.Role == 1)
     {
         if (ViewBag.Message != null)
         {
