--- a/webMetics/Views/Participante/ListaParticipantes.cshtml
+++ b/webMetics/Views/Participante/ListaParticipantes.cshtml
@@ -94,7 +94,7 @@
                                 <th scope="col">Correo institucional</th>
                                 <th scope="col">Teléfono</th>
                                 <th scope="col" style="width:5%"></th>
-                                @if (rolCookie == 1)
+                                @if (ViewBag.Role == 1)
                                 {
                                     <th scope="col" style="width:5%"></th>
                                 }
@@ -120,7 +120,7 @@
                                     <td class="titulo-listas">
                                         @Html.ActionLink(" ", "VerDatosParticipante", "Participante", new { idParticipante = participante.idParticipante }, new { @class = "btn btn-info bi bi-search" })
                                     </td>
-                                    @if (rolCookie == 1)
+                                    @if (ViewBag.Role == 1)
                                     {
                                         <td class="titulo-listas">
                                             <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#modalEliminar" onclick="actualizarModal('@participante.idParticipante', '@ViewBag.IdGrupo')">
