--- a/webMetics/Views/Participante/CrearUsuario.cshtml
+++ b/webMetics/Views/Participante/CrearUsuario.cshtml
@@ -27,7 +27,7 @@
             }
         }
 
-        using (Html.BeginForm("FormularioDeUsuario", "Participante", FormMethod.Post, new { enctype = "multipart/form-data" }))
+        using (Html.BeginForm("CrearUsuario", "Participante", FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
             @Html.AntiForgeryToken()
             <div class="form-horizontal">
